	PR bootstrap/19796 	Revert: 	2005-01-26  Richard Sandiford  <rsandifo@redhat.com> 	* config/mips/iris6.h (ENDFILE_SPEC): Don't link in irix-csr.o if 	either -ffast-math or -funsafe-math-optimizations is in use.

2005-01-24  Richard Sandiford  <rsandifo@redhat.com>
	* config/mips/irix-csr.c: New file.
	* config/mips/t-iris6 (irix-csr.o): New rule to build it.
	(EXTRA_MULTILIB_PARTS): Add irix-csr.o.
	* config/mips/iris6.h (ENDFILE_SPEC): Include it in n32 and n64
	executables.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94696 138bc75d-0d04-0410-961f-82ee72b054a4